--- a/Main/main.tex
+++ b/Main/main.tex
@@ -8,7 +8,7 @@
 \exyear{2023}
 \exnum{2}
 \extitle{\textit{Versjonskontroll med Git}}
-\author{Kiet Tuan Hoang}
+\author{Terje Haugland Jacobsson}
 
 \begin{document}
 \maketitle 
