--- a/Main/main.tex
+++ b/Main/main.tex
@@ -1,6 +1,6 @@
 \documentclass[]{itkoving}
 %\documentclass[show-solution]{itkoving}
-\input{Main/utils}
+\input{utils}
 
 \exsub{TTK4235 - Tilpassede datasystemer}
 \exsem{Vår} 
@@ -16,8 +16,8 @@
 
 \vspace{0.75cm}
 
-\input{Main/chapters/1-Introduction}
-\input{Main/chapters/2-Tutorial}
+\input{chapters/1-Introduction}
+\input{chapters/2-Tutorial}
 
 
 
