--- a/Main/main.tex
+++ b/Main/main.tex
@@ -8,7 +8,7 @@
 \exyear{2024}
 \exnum{2}
 \extitle{\textit{Versjonskontroll med Git}}
-\author{Terje Haugland Jacobsson}
+\author{Jacobsson, Natlandsmyr}
 
 \begin{document}
 \maketitle 
